Реализация репозитория